--- a/esokare-d.html
+++ b/esokare-d.html
@@ -25,7 +25,7 @@
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
-      <button id="themeBtn" title="Toggle dark mode">🌓</button>
+      <button id="themeBtn" aria-label="Toggle dark mode" title="Toggle dark mode">🌓</button>
     </div>
   </header>
 
