--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Contact Astra Biocare Pvt Ltd for product inquiries and support." />
   <title>Astra Biocare Pvt Ltd - Contact</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Astra Biocare Pvt Ltd",
+      "url": "https://www.astrabiocare.com"
+    }
+  </script>
 </head>
 <body>
   <header class="site-header">
