--- a/cycle-21.html
+++ b/cycle-21.html
@@ -3,12 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Discover CYCLE-21 from Astra Biocare." />
   <title>CYCLE-21 - Astra Biocare</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Product",
+      "name": "CYCLE-21",
+      "brand": "Astra Biocare",
+      "url": "https://www.astrabiocare.com/cycle-21.html"
+    }
+  </script>
 </head>
 <body>
   <header class="site-header">
