--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,12 @@
     <section>
       <h2>Contact Us</h2>
       <p>We’d love to hear from you! Please fill out the form and we’ll get in touch shortly.</p>
+      <p class="contact-links">
+        <strong>Call us:</strong>
+        <a href="tel:+919876543210" aria-label="Call Astra Biocare">+91&nbsp;98765&nbsp;43210</a><br>
+        <strong>Email:</strong>
+        <a href="mailto:info@astrabiocare.com" aria-label="Email Astra Biocare">info@astrabiocare.com</a>
+      </p>
       <form id="contactForm">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required />
