Add social media integration

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Astra Biocare Pvt Ltd - Innovative Pharma Solutions" />
   <title>Astra Biocare Pvt Ltd</title>
   <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
@@ -76,6 +77,14 @@
       <p>Have questions or want to collaborate with us? We’re just a message away.</p>
       <a href="contact.html" class="btn-primary">Contact Us</a>
     </section>
+
+    <section class="social-feed" data-aos="fade-up">
+      <div class="fb-page" data-href="https://www.facebook.com/astrabiocare/" data-tabs="timeline" data-width="500" data-height="600" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+        <blockquote cite="https://www.facebook.com/astrabiocare/" class="fb-xfbml-parse-ignore">
+          <a href="https://www.facebook.com/astrabiocare/">Astra Biocare</a>
+        </blockquote>
+      </div>
+    </section>
   </main>
 
   <div id="newsletterModal" class="modal">
@@ -96,6 +105,12 @@
       <address>
         Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
       </address>
+      <ul class="social-links">
+        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+      </ul>
     </div>
   </footer>
   <script>
@@ -105,5 +120,6 @@
       }
     });
   </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"></script>
 </body>
 </html>
