--- a/snoril-d.html
+++ b/snoril-d.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Discover SNORIL-D from Astra Biocare." />
   <title>SNORIL-D - Astra Biocare</title>
   <link rel="stylesheet" href="style.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
   <script defer src="script.js"></script>
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
@@ -45,6 +46,7 @@
         <h2>SNORIL-D</h2>
         <p>Dual-Action Anti-Cold</p>
         <a href="#request" class="btn-primary">Request Sample</a>
+          <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
         <img src="img/snoril-d.jpeg" alt="SNORIL-D Product Image" />
@@ -88,6 +90,12 @@
       <address>
         Registered Office: #16, 2nd cross, Aruna Building, Somasundrapalya, Bangalore, Karnataka - 560102.
       </address>
+      <ul class="social-links">
+        <li><a href="https://www.facebook.com/astrabiocare/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a></li>
+      </ul>
     </div>
   </footer>
 </body>
