Move product pages to products folder and update links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <nav>
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
+          <li><a href="products/products.html">Products</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -38,7 +38,7 @@
         <p>
           Astra Biocare is committed to delivering innovative and high-quality pharmaceutical products to enhance global well-being.
         </p>
-        <a href="products.html" class="btn-primary">Explore Products</a>
+        <a href="products/products.html" class="btn-primary">Explore Products</a>
       </div>
       <div class="hero-img">
         <img src="img/hero_medicines.jpg" alt="Pharmaceutical Products" />
@@ -61,7 +61,7 @@
           <h3>SNORIL-LX</h3>
         </div>
       </div>
-      <a href="products.html" class="btn-secondary">View All Products</a>
+      <a href="products/products.html" class="btn-secondary">View All Products</a>
     </section>
 
     <section class="about-preview" data-aos="fade-right">
