--- a/products/clean-v7.html
+++ b/products/clean-v7.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Discover CLEAN-V7 from Astra Biocare." />
   <title>CLEAN-V7 - Astra Biocare</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script defer src="script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
   <script type="application/ld+json">
@@ -17,7 +17,7 @@
       "@type": "Product",
       "name": "CLEAN-V7",
       "brand": "Astra Biocare",
-      "url": "https://www.astrabiocare.com/clean-v7.html"
+      "url": "https://www.astrabiocare.com/products/clean-v7.html"
     }
   </script>
 </head>
@@ -25,15 +25,15 @@
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
-        <img src="img/company_logo.png" alt="Astra Biocare Logo" />
+        <img src="../img/company_logo.png" alt="Astra Biocare Logo" />
         <h1>Astra Biocare</h1>
       </div>
       <nav>
         <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../about.html">About Us</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
       <button id="themeBtn" aria-label="Toggle dark mode" title="Toggle dark mode">🌓</button>
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="img/clean-v7.jpeg" alt="CLEAN-V7 Product Image" />
+        <img src="../img/clean-v7.jpeg" alt="CLEAN-V7 Product Image" />
       </div>
     </section>
 
