--- a/products/cycle-21.html
+++ b/products/cycle-21.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Discover SNORIL-D from Astra Biocare." />
-  <title>SNORIL-D - Astra Biocare</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Discover CYCLE-21 from Astra Biocare." />
+  <title>CYCLE-21 - Astra Biocare</title>
+  <link rel="stylesheet" href="../style.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script defer src="script.js"></script>
+  <script defer src="../script.js"></script>
   <script defer src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
   <script>AOS.init();</script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Product",
-      "name": "SNORIL-D",
+      "name": "CYCLE-21",
       "brand": "Astra Biocare",
-      "url": "https://www.astrabiocare.com/snoril-d.html"
+      "url": "https://www.astrabiocare.com/products/cycle-21.html"
     }
   </script>
 </head>
@@ -25,15 +25,15 @@
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
-        <img src="img/company_logo.png" alt="Astra Biocare Logo" />
+        <img src="../img/company_logo.png" alt="Astra Biocare Logo" />
         <h1>Astra Biocare</h1>
       </div>
       <nav>
         <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../about.html">About Us</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
       <button id="themeBtn" aria-label="Toggle dark mode" title="Toggle dark mode">🌓</button>
@@ -43,13 +43,13 @@
   <main class="container">
     <section class="hero" data-aos="zoom-in">
       <div class="hero-text">
-        <h2>SNORIL-D</h2>
-        <p>Dual-Action Anti-Cold</p>
+        <h2>CYCLE-21</h2>
+        <p>Cycle Support Supplement</p>
         <a href="#request" class="btn-primary">Request Sample</a>
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="img/snoril-d.jpeg" alt="SNORIL-D Product Image" />
+        <img src="../img/cycle-21.jpeg" alt="CYCLE-21 Product Image" />
       </div>
     </section>
 
