--- a/products/products.html
+++ b/products/products.html
@@ -4,23 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Astra Biocare Pvt Ltd - Products</title>
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <link rel="stylesheet" href="../style.css" />
+  <script defer src="../script.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p+1JxS8EU1RcUnnqgKTTDYXYBvCZUc5JSpSXZLF645xvLZHbiRL+CRceZ9UnB9Z9GjK6xwHy3v4sHtQ+Dx2Y/Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-container">
       <div class="logo">
-        <img src="img/company_logo.png" alt="Astra Biocare Logo" />
+        <img src="../img/company_logo.png" alt="Astra Biocare Logo" />
         <h1>Astra Biocare</h1>
       </div>
       <nav>
         <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="products.html">Products</a></li>
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="../about.html">About Us</a></li>
+          <li><a href="../contact.html">Contact</a></li>
         </ul>
       </nav>
       <button id="themeBtn" aria-label="Toggle dark mode" title="Toggle dark mode">🌓</button>
@@ -31,16 +31,16 @@
     <section>
       <h2>Our Products</h2>
       <div class="product-grid">
-        <a class="product-card" href="foljoy.html"><img src="img/foljoy.jpeg" alt="FOLJOY"><h3>FOLJOY</h3></a>
-        <a class="product-card" href="clean-v7.html"><img src="img/clean-v7.jpeg" alt="CLEAN-V7"><h3>CLEAN-V7</h3></a>
-        <a class="product-card" href="clean-v3.html"><img src="img/clean-v3.jpeg" alt="CLEAN-V3"><h3>CLEAN-V3</h3></a>
-        <a class="product-card" href="cycle-21.html"><img src="img/cycle-21.jpeg" alt="CYCLE-21"><h3>CYCLE-21</h3></a>
-        <a class="product-card" href="cystopil.html"><img src="img/cystopil.jpeg" alt="CYSTOPIL"><h3>CYSTOPIL</h3></a>
-        <a class="product-card" href="esokare-d.html"><img src="img/esokare-d.jpeg" alt="ESOKARE-D"><h3>ESOKARE-D</h3></a>
-        <a class="product-card" href="snoril-lx.html"><img src="img/snoril-lx.jpeg" alt="SNORIL-LX"><h3>SNORIL-LX</h3></a>
-        <a class="product-card" href="snoril-d.html"><img src="img/snoril-d.jpeg" alt="SNORIL-D"><h3>SNORIL-D</h3></a>
-        <a class="product-card" href="vitotop.html"><img src="img/vitotop.jpeg" alt="VITOTOP"><h3>VITOTOP</h3></a>
-        <a class="product-card" href="d3-nine.html"><img src="img/d3-nine.jpeg" alt="D3-NINE"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="foljoy.html"><img src="../img/foljoy.jpeg" alt="FOLJOY"><h3>FOLJOY</h3></a>
+        <a class="product-card" href="clean-v7.html"><img src="../img/clean-v7.jpeg" alt="CLEAN-V7"><h3>CLEAN-V7</h3></a>
+        <a class="product-card" href="clean-v3.html"><img src="../img/clean-v3.jpeg" alt="CLEAN-V3"><h3>CLEAN-V3</h3></a>
+        <a class="product-card" href="cycle-21.html"><img src="../img/cycle-21.jpeg" alt="CYCLE-21"><h3>CYCLE-21</h3></a>
+        <a class="product-card" href="cystopil.html"><img src="../img/cystopil.jpeg" alt="CYSTOPIL"><h3>CYSTOPIL</h3></a>
+        <a class="product-card" href="esokare-d.html"><img src="../img/esokare-d.jpeg" alt="ESOKARE-D"><h3>ESOKARE-D</h3></a>
+        <a class="product-card" href="snoril-lx.html"><img src="../img/snoril-lx.jpeg" alt="SNORIL-LX"><h3>SNORIL-LX</h3></a>
+        <a class="product-card" href="snoril-d.html"><img src="../img/snoril-d.jpeg" alt="SNORIL-D"><h3>SNORIL-D</h3></a>
+        <a class="product-card" href="vitotop.html"><img src="../img/vitotop.jpeg" alt="VITOTOP"><h3>VITOTOP</h3></a>
+        <a class="product-card" href="d3-nine.html"><img src="../img/d3-nine.jpeg" alt="D3-NINE"><h3>D3-NINE</h3></a>
       </div>
     </section>
   </main>
