--- a/products/products.html
+++ b/products/products.html
@@ -31,16 +31,26 @@
     <section>
       <h2>Our Products</h2>
       <div class="product-grid">
-        <a class="product-card" href="foljoy.html"><img src="../img/foljoy.jpeg" alt="FOLJOY"><h3>FOLJOY</h3></a>
-        <a class="product-card" href="clean-v7.html"><img src="../img/clean-v7.jpeg" alt="CLEAN-V7"><h3>CLEAN-V7</h3></a>
-        <a class="product-card" href="clean-v3.html"><img src="../img/clean-v3.jpeg" alt="CLEAN-V3"><h3>CLEAN-V3</h3></a>
-        <a class="product-card" href="cycle-21.html"><img src="../img/cycle-21.jpeg" alt="CYCLE-21"><h3>CYCLE-21</h3></a>
-        <a class="product-card" href="cystopil.html"><img src="../img/cystopil.jpeg" alt="CYSTOPIL"><h3>CYSTOPIL</h3></a>
-        <a class="product-card" href="esokare-d.html"><img src="../img/esokare-d.jpeg" alt="ESOKARE-D"><h3>ESOKARE-D</h3></a>
-        <a class="product-card" href="snoril-lx.html"><img src="../img/snoril-lx.jpeg" alt="SNORIL-LX"><h3>SNORIL-LX</h3></a>
+        <a class="product-card" href="supergest.html"><img src="../img/supergest-sr.jpg" alt="SUPERGEST-SR"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="super-hb.html"><img src="../img/super-hb.JPG" alt="SUPER-HB"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="foljoy.html"><img src="../img/foljoy.JPG" alt="FOLJOY"><h3>FOLJOY</h3></a>
+        <a class="product-card" href="clean-v7.html"><img src="../img/clean-v7.JPG" alt="CLEAN-V7"><h3>CLEAN-V7</h3></a>
+        <a class="product-card" href="clean-v3.html"><img src="../img/clean-v3.JPG" alt="CLEAN-V3"><h3>CLEAN-V3</h3></a>
+        <a class="product-card" href="cycle-21.html"><img src="../img/cycle-21.JPG" alt="CYCLE-21"><h3>CYCLE-21</h3></a>
+        <a class="product-card" href="cystopil.html"><img src="../img/cystopil.JPG" alt="CYSTOPIL"><h3>CYSTOPIL</h3></a>
+        <a class="product-card" href="esokare-d.html"><img src="../img/esocare-d.JPG" alt="ESOKARE-D"><h3>ESOKARE-D</h3></a>
+        <a class="product-card" href="z-on.html"><img src="../img/z-on.jpeg" alt="Z-ON"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="snoril-lx.html"><img src="../img/snoril-lx.JPG" alt="SNORIL-LX"><h3>SNORIL-LX</h3></a>
         <a class="product-card" href="snoril-d.html"><img src="../img/snoril-d.jpeg" alt="SNORIL-D"><h3>SNORIL-D</h3></a>
-        <a class="product-card" href="vitotop.html"><img src="../img/vitotop.jpeg" alt="VITOTOP"><h3>VITOTOP</h3></a>
-        <a class="product-card" href="d3-nine.html"><img src="../img/d3-nine.jpeg" alt="D3-NINE"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="snoril-d.html"><img src="../img/snoril-cold.JPG" alt="SNORIL-COLD"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="vitotop.html"><img src="../img/vitotop.JPG" alt="VITOTOP"><h3>VITOTOP</h3></a>
+        <a class="product-card" href="d3-nine.html"><img src="../img/d3-nine+.JPG" alt="D3-NINE+"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="d3-nine.html"><img src="../img/d3-nine.JPG" alt="D3-NINE"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="astraclav.html"><img src="../img/astraclav.jpeg" alt="ASTRACLAV"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="rightcef.html"><img src="../img/rightcef.jpeg" alt="RIGHTCEF"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="setmol-mds.html"><img src="../img/setmol-mds.jpeg" alt="SETMOL-MDS"><h3>D3-NINE</h3></a>
+        <a class="product-card" href="megamont-l.html"><img src="../img/megamont-l.jpeg" alt="MEGAMONT-L"><h3>D3-NINE</h3></a>
+
       </div>
     </section>
   </main>
