Fix image paths

--- a/products/cycle-21.html
+++ b/products/cycle-21.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/cycle-21.jpeg" alt="CYCLE-21 Product Image" />
+        <img src="../img/cycle-21.JPG" alt="CYCLE-21 Product Image" />
       </div>
     </section>
 
