--- a/products/foljoy.html
+++ b/products/foljoy.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/foljoy.jpeg" alt="FOLJOY Product Image" />
+        <img src="../img/foljoy.JPG" alt="FOLJOY Product Image" />
       </div>
     </section>
 
