--- a/products/snoril-lx.html
+++ b/products/snoril-lx.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/snoril-lx.jpeg" alt="SNORIL-LX Product Image" />
+        <img src="../img/snoril-lx.JPG" alt="SNORIL-LX Product Image" />
       </div>
     </section>
 
