--- a/products/vitotop.html
+++ b/products/vitotop.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/vitotop.jpeg" alt="VITOTOP Product Image" />
+        <img src="../img/vitotop.JPG" alt="VITOTOP Product Image" />
       </div>
     </section>
 
