--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
       <h2>Featured Products</h2>
       <div class="product-grid">
         <div class="product-card" data-aos="fade-up" data-aos-delay="100">
-          <img src="img/foljoy.jpeg" alt="FOLJOY - Next Gen Folate" />
+          <img src="img/foljoy.JPG" alt="FOLJOY - Next Gen Folate" />
           <h3>FOLJOY</h3>
         </div>
         <div class="product-card" data-aos="fade-up" data-aos-delay="200">
-          <img src="img/clean-v7.jpeg" alt="CLEAN-V7" />
+          <img src="img/clean-v7.JPG" alt="CLEAN-V7" />
           <h3>CLEAN-V7</h3>
         </div>
         <div class="product-card" data-aos="fade-up" data-aos-delay="300">
-          <img src="img/snoril-lx.jpeg" alt="SNORIL-LX" />
+          <img src="img/snoril-lx.JPG" alt="SNORIL-LX" />
           <h3>SNORIL-LX</h3>
         </div>
       </div>
