--- a/products/clean-v3.html
+++ b/products/clean-v3.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/clean-v3.jpeg" alt="CLEAN-V3 Product Image" />
+        <img src="../img/clean-v3.JPG" alt="CLEAN-V3 Product Image" />
       </div>
     </section>
 
