--- a/products/clean-v7.html
+++ b/products/clean-v7.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/clean-v7.jpeg" alt="CLEAN-V7 Product Image" />
+        <img src="../img/clean-v7.JPG" alt="CLEAN-V7 Product Image" />
       </div>
     </section>
 
