--- a/products/d3-nine.html
+++ b/products/d3-nine.html
@@ -49,7 +49,7 @@
           <button class="share-btn" type="button">Share</button>
       </div>
       <div class="hero-img">
-        <img src="../img/d3-nine.jpeg" alt="D3-NINE Product Image" />
+        <img src="../img/d3-nine.JPG" alt="D3-NINE Product Image" />
       </div>
     </section>
 
