--- a/products/products.html
+++ b/products/products.html
@@ -11,10 +11,10 @@
 <body>
   <header class="site-header">
     <div class="container header-container">
-      <div class="logo">
+      <a href="../index.html" class="logo">
         <img src="../img/company_logo.png" alt="Astra Biocare Logo" />
         <h1>Astra Biocare</h1>
-      </div>
+      </a>
       <nav>
         <ul class="nav-list">
           <li><a href="../index.html">Home</a></li>
